# Keyland

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: CI.yaml  Release.yaml
crates/event-uring/: Cargo.toml
crates/event-uring/src/: event.rs  event_uring.rs  handler.rs  ident.rs  interface.rs  lib.rs  uring.rs
crates/event-uring/src/events/: mod.rs
crates/event-uring/src/platform/: mod.rs
crates/event-uring/src/protocol/: event.rs  event_loop.rs  event_uring.rs  ident.rs  mod.rs  register.rs
crates/gpu-hal/: Cargo.toml
crates/kcommon/: Cargo.toml
crates/kcommon/src/: lib.rs
crates/kerror/: Cargo.toml
crates/kerror/src/: lib.rs  rkyv.rs
crates/keyland/: Cargo.toml  build.rs
crates/keyland/src/: lib.rs  prelude.rs
crates/keyland/src/config/: core.rs
crates/keyland/src/nil/: mod.rs
crates/keyland/tests/: run.rs
crates/keyland/tests/snapshots/: run__nil.snap
crates/kmacro/: Cargo.toml
crates/kmacro/src/: lib.rs  visibility.rs
crates/libio_uring/: Cargo.toml
crates/libio_uring/playground/: io_uring.rs
crates/libio_uring/src/: flag.rs  lib.rs
crates/wayland-parser/: Cargo.toml
crates/wayland-parser/docs/: ASCII.md
crates/wayland-parser/src/: lib.rs
crates/wayland-parser/src/scaner/: att.rs  comment.rs  element.rs  mod.rs  tag.rs  text.rs  unit.rs
crates/wayland-parser/src/scaner/luts/: entity.rs  mod.rs  name.rs  space.rs  text.rs
script/sh/: __init__.sh  xtask.sh
script/xtask/: Cargo.toml
script/xtask/src/: command.rs  main.rs
