[workspace]
members  = ["crates/kerror", "crates/keyland", "script/xtask"]
resolver = "2"


[workspace.package]
authors    = ["westhide <westhide.dev@gmail.com>"]
edition    = "2021"
license    = "MIT"
repository = "https://github.com/westhide.dev/Keyland.git"
version    = "0.1.0"


[workspace.dependencies]
kerror.path  = "crates/kerror"
keyland.path = "crates/keyland"


quote     = { version = "1.0.33" }
rkyv      = { version = "0.7.44", features = ["validation"] }
serde     = { version = "1.0", features = ["derive"] }
syn       = { version = "2.0.41", features = ["extra-traits"] }
thiserror = "1.0.51"
toml      = { version = "0.8.12" }
toml_edit = { version = "0.22.9" }

# Development
criterion  = "0.5.1"
insta      = "1.34.0"
syn-select = "0.3.0"


[profile.release]
codegen-units = 1
lto           = true
opt-level     = 3
strip         = "symbols"
