[workspace]
members = [
    "crates/event-uring",
    "crates/gpu-hal",
    "crates/kcommon",
    "crates/kerror",
    "crates/keyland",
    "crates/kmacro",
    "script/xtask"
]
resolver = "2"


[workspace.package]
authors    = ["westhide <westhide.dev@gmail.com>"]
edition    = "2021"
license    = "MIT"
repository = "https://github.com/westhide.dev/Keyland.git"
version    = "0.1.0"


[workspace.dependencies]
# Memeber
event-uring = { path = "crates/event-uring" }
gpu-hal     = { path = "crates/gpu-hal" }
kcommon     = { path = "crates/kcommon" }
kerror      = { path = "crates/kerror" }
keyland     = { path = "crates/keyland" }
kmacro      = { path = "crates/kmacro" }

# Macro
proc-macro2 = { version = "1.0.81" }
quote       = { version = "1.0.33" }
syn         = { version = "2.0.60", features = ["extra-traits", "full"] }
syn-select  = { version = "0.3.0" }

# Release
clap      = { version = "4.5.4", features = ["derive"] }
log       = { version = "0.4.19" }
rkyv      = { version = "0.7.44", features = ["validation"] } # TODO: package
serde     = { version = "1.0", features = ["derive"] }        # TODO: package
thiserror = { version = "1.0.51" }
toml      = { version = "0.8.12" }                            # TODO: package
toml_edit = { version = "0.22.9" }
wgpu      = { version = "0.19.3" }                            # TODO: package

# Build

# Development
criterion          = { version = "0.5.1" }
insta              = { version = "1.34.0" }
tracing            = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18" }


[patch.crates-io]
# ahash           = { path = "contrib/aHash" }
# ptr_meta        = { path = "contrib/ptr_meta/ptr_meta" }
# ptr_meta_derive = { path = "contrib/ptr_meta/ptr_meta_derive" }
# rend            = { path = "contrib/rend" }
cfg-if         = { path = "contrib/cfg-if" }
equivalent     = { path = "contrib/equivalent" }
getrandom      = { path = "contrib/getrandom" }
hashbrown      = { path = "contrib/hashbrown" }
indexmap       = { path = "contrib/indexmap" }
libc           = { path = "contrib/libc" }
once_cell      = { path = "contrib/once_cell" }
proc-macro2    = { path = "contrib/proc-macro2" }
quote          = { path = "contrib/quote" }
seahash        = { path = "contrib/seahash" }
simdutf8       = { path = "contrib/simdutf8" }
thiserror      = { path = "contrib/thiserror" }
thiserror-impl = { path = "contrib/thiserror/impl" }
unicode-ident  = { path = "contrib/unicode-ident" }
winnow         = { path = "contrib/winnow" }


[workspace.lints.clippy]
# cargo       = "warn"
# restriction = "warn"
as_conversions = "warn"
pedantic       = "warn"


[profile.release]
codegen-units = 1
lto           = true
opt-level     = 3
strip         = "symbols"
