[package]
description = "event-uring"
edition     = { workspace = true }
license     = { workspace = true }
name        = "event-uring"
version     = { workspace = true }


[lints]
workspace = true


[lints.clippy]
unused_attributes = "allow"


[dependencies]


[features]
default        = ["platform_linux", "platform_macos", "platform_webos"]
platform_linux = []
platform_macos = []
platform_webos = []
