[package]
description       = "keyland"
edition.workspace = true
license.workspace = true
name              = "keyland"
version.workspace = true

[lib]
name = "keyland"
path = "src/lib.rs"

[dependencies]
kerror.workspace    = true
serde.workspace     = true
toml.workspace      = true
toml_edit.workspace = true
