[package]
description = "keyland"
edition     = { workspace = true }
license     = { workspace = true }
name        = "keyland"
version     = { workspace = true }


[lints]
workspace = true


[lib]
name = "keyland"
path = "src/lib.rs"


[dependencies]
kcommon   = { workspace = true }
kerror    = { workspace = true }
rkyv      = { workspace = true }
serde     = { workspace = true }
toml      = { workspace = true }
toml_edit = { workspace = true }


[dev-dependencies]
insta = { workspace = true }


[build-dependencies]
kcommon = { workspace = true }
kerror  = { workspace = true }
