[package]
description = "libio_uring"
edition     = { workspace = true }
license     = { workspace = true }
name        = "libio_uring"
version     = { workspace = true }


[lints]
workspace = true


[dependencies]
rustix = { workspace = true }


[[example]]
name = "io_uring"
path = "playground/io_uring.rs"
