[package]
edition = { workspace = true }
license = { workspace = true }
name    = "xtask"
version = { workspace = true }


[lints]
workspace = true


[dependencies]
clap               = { workspace = true }
kcommon            = { workspace = true }
kerror             = { workspace = true }
log                = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
